--- a/gb/17/10/16/n9735557.md
+++ b/gb/17/10/16/n9735557.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ikizhq3096/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ikizhq3096/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ikizhq3096/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ikizhq3096/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ikizhq3096/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>海马体增强感知反应 有助治疗阿兹海默症</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/ccp-virus-global-jytj_1200x800-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2017年10月16日讯】（大纪元记者晨曦编译报导）位于我们大脑丘脑和内侧颞叶之间的灰色部分形似海马，被称作<ahref="https://github.com/ikizhq3096/djy/blob/master/gb/tag/%E6%B5%B7%E9%A9%AC%E4%BD%93.md#1">海马体</a>。近期，发表在《美国国家科学院院刊》（PNAS）上的一篇研究结果表明，海马体能够增强大脑对感知的反应，这是学术界的一项新发现。</p>
-<p>香港大学的科研人员以大鼠为实验对象，用光纤对其大脑<ahref="https://github.com/ikizhq3096/djy/blob/master/gb/tag/%E6%B5%B7%E9%A9%AC%E4%BD%93.md#1">海马体</a>的神经细胞进行刺激，再通过磁共振功能成像技术（fMRI）监测大脑活动，从而取得了这一突破性发现。该发现不仅能够帮助我们深入了解大脑的整体运作，同时也有助于某些病症的治疗，如阿兹海默症。</p>
+	<p>【大纪元2017年10月16日讯】（大纪元记者晨曦编译报导）位于我们大脑丘脑和内侧颞叶之间的灰色部分形似海马，被称作<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B7%E9%A9%AC%E4%BD%93.md#1">海马体</a>。近期，发表在《美国国家科学院院刊》（PNAS）上的一篇研究结果表明，海马体能够增强大脑对感知的反应，这是学术界的一项新发现。</p>
+<p>香港大学的科研人员以大鼠为实验对象，用光纤对其大脑<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B7%E9%A9%AC%E4%BD%93.md#1">海马体</a>的神经细胞进行刺激，再通过磁共振功能成像技术（fMRI）监测大脑活动，从而取得了这一突破性发现。该发现不仅能够帮助我们深入了解大脑的整体运作，同时也有助于某些病症的治疗，如阿兹海默症。</p>
 <p>我们对大脑的了解大部分是基于对脑外伤的研究，也就是说，大脑的不同部位受伤后会导致不同的后果，因此我们才得以认识到该部位的真正作用，海马体也不例外。</p>
 <p>通过以往的研究，我们已经知道海马体在记忆的形成和空间认知上起着重要作用。例如，海马体受损的病人会出现健忘症；患有阿兹海默症的个体也被发现，其大脑海马体有严重的组织缺失。其它病症诸如癫痫及精神分裂症也都与海马体有关，这也意味着大脑的这部分神经系统还存在更多未知的功能。</p>
 <p>近年来，神经学家们开始对大脑的各部分作为一个整体的运作方式进行研究，即所谓的功能连接。但这并非易事。在某一事件发生后，通过fMRI的监测，研究者们可以判断大脑的哪部分变得活跃，但如果要评估各部分之间的关系，则需要更强大的工具。</p>
@@ -19,42 +19,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/7/7/n8075964.md#1">预防趁早 研究：20多岁就可查出阿玆海默症</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/10/30/n8444821.md#1">“沉默”能促进脑细胞再生 健脑、开智又纾压</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/17/4/4/n9000734.md#1">阿兹海默症预防全攻略：饮食 锻炼 动脑 纾压</a></li>
-<li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/17/4/6/n9008837.md#1">短期记忆丧失 7大原因+13个解方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/7/n8075964.md#1">预防趁早 研究：20多岁就可查出阿玆海默症</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/10/30/n8444821.md#1">“沉默”能促进脑细胞再生 健脑、开智又纾压</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/4/n9000734.md#1">阿兹海默症预防全攻略：饮食 锻炼 动脑 纾压</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/4/6/n9008837.md#1">短期记忆丧失 7大原因+13个解方</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9817670.md#1" target="_blank">汉清：百年沧桑</a></li><li><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481899.md#1" target="_blank">美严审迫害者签证 震慑中共 精英支持</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672001.md#1" target="_blank">袁斌：计划生育，酿成了多少灭绝人性的惨剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/9/26/n12433081.md#1">奇人预言“靖康之难”：天星不照 火龙骑日</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/8/n12462258.md#1">香港一名街头歌手的故事</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12466587.md#1">一群美军士兵称 在韩战时遭UFO以光线攻击</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12466299.md#1">女子休克时灵魂出窍 看见医生在抢救自己</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/9/24/n12428110.md#1">“自写履历”有多难？醉入冥府见奇闻</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468742.md#1">【重播】彭斯哥伦布演讲：选择美国走哪条路</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/8/26/n12359236.md#1">【思想领袖】中国的盖世太保仍在运作</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/13/n12472517.md#1">【十字路口】透视共产党：四大诡话 党媒维稳</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12465933.md#1">从食品到日用品 在Costco做六件事可省钱</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467642.md#1">蓬佩奥：中共已开始在各方面付出代价</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468085.md#1">疫情扩大 青岛大规模测核酸 多地发旅行警告</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469576.md#1">抗癌成功首晒全家福照 余苑绮灿笑：终于达成</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468741.md#1">章子怡携女探班汪峰 意外曝光手上硕大钻戒</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468501.md#1">疫情下对赌失败 周星驰将与大陆金主对簿公堂</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12471021.md#1">BTS提韩战惹怒五毛 中共战狼发言人罕见灭火</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12471315.md#1">胡歌蹲下来接受采访 暖心举动获称赞</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469663.md#1">被主人打毒针并活埋 小狗自己挖开坟墓逃出</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469863.md#1">前美国防部官员：应租F-35战机给台湾抗共</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467786.md#1">好疗愈！ 台中搜救犬挥舞国旗参加升旗典礼</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12470563.md#1">70岁仍有20岁身材 日医：简单的减糖餐是火锅</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467896.md#1">美国调查：搬家的压力比离婚或分手更大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ikizhq3096/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ikizhq3096/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/16/n9735557.htm">海马体增强感知反应 有助治疗阿兹海默症</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/16/n9735557.htm">海马体增强感知反应 有助治疗阿兹海默症</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ikizhq3096/djy/blob/master/gb/17/10/16/n9735557.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ikizhq3096/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ikizhq3096/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ikizhq3096/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ikizhq3096/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/10/16/n9735557.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
